
Work toward next release.  Currently under development.

ADDED:

* CAT-SOOP now includes the mpmath library (http://mpmath.org/), and the
  'expression' question type makes use of it.

* The decimal precision of numbers in the 'expression' question type can now be
  altered via the 'csq_precision' variable.

* Made CAT-SOOP work properly with LibreJS
  (https://www.gnu.org/software/librejs/).

CHANGED:

* Updated KaTeX to version 0.10.0-alpha.

* Updated MathJax to version 2.7.4.

* 'csq_threshold' and 'csq_ratio_check' have been replaced with
  'csq_ratio_threshold' and 'csq_absolute_threshold' in the 'expression'
  question type.  The more lenient of the two thresholds is used.  Default
  behavior is the same as before.

DEPRECATED:

REMOVED:

* Removed jQuery, Bootstrap, and SweetAlert2 (replaced with our own JS/CSS).

* Removed cs_util/process_theme and removed dependence on outside fonts.

FIXED:

* Fixed an issue with error reporting when trying to log a tuple that contains
  an element that can't be logged.

SECURITY:

* Prevent submissions from being able to access materials defined in
  csq_code_pre from pythoncode questions.

DOCUMENTATION:


##################
# Version 12.1.1 #
##################

FIXED:

* Fixed an issue with unintentional "broadcasting" of numpy arrays in certain
  'expression' questions.

* Fixed an issue that prevented datetime and timedelta objects from being
  logged.


##################
# Version 12.1.0 #
##################

ADDED:

* Added questions' types and grading modes to the 'question_info' cache.

* datetime and timedelta objects (from the datetime module) are now
  allowed in log entries.

CHANGED:

* The automatic source code download no longer saves cached copies, to avoid
  accidentally filling small disks.

* Upgraded KaTeX to version 0.9.0.

* Upgraded SweetAlert2 to version 7.15.1.

* Upgraded MathJax to version 2.7.3.

* Upgraded PLY to version 3.11.

REMOVED:
